# ImGuy

./: CMakeLists.txt
inc/: global_header.hpp  main.hpp
inc/gui/: base_gui.hpp  gui_handler.hpp
inc/gui/window/: main_window.hpp
lib/imgui/: imgui_demo.cpp
src/: main.cpp
src/gui/: base_gui.cpp  gui_handler.cpp
src/gui/window/: main_window.cpp
